# inbox_lens

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  commands.ps1  docker-compose.tailscale.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  line-endings.yaml  lint.yml  publish.yaml  test.yaml  test.yml
.zcode/plans/: plan-sess_3e4ce8b5-2a25-4293-8fcc-a6976bc6c1ec.md  plan-sess_426cd208-6e0e-493b-a261-cf5725f56d5f.md  plan-sess_69c6dd95-8ece-4717-8c0e-ef34159f4072.md
scripts/hooks/: pre-commit
src/data/: keywords.example.json
src/scripts/: auth.py  constants.py  event_bus.py  healthcheck.py  idle_monitor.py  updater.py  utils.py  web.py
src/scripts/bot/: __init__.py  __main__.py  formatters.py  handlers.py
src/scripts/cache/: __init__.py  crypto.py  db.py  queries.py  scanner.py
src/scripts/email_reader/: __init__.py  imap.py  keywords.py  parser.py  smtp.py
src/tests/: _helpers.py  conftest.py  test_auth.py  test_bot.py  test_cache.py  test_constants.py  test_crypto.py  test_email_reader.py  test_event_bus.py  test_idle_monitor.py  test_imap.py  test_smtp.py  test_updater.py  test_utils.py  test_web.py
src/web/js/: base.js  compose.js  emails.js  keywords.js  settings-tabs.js  settings.js  theme-init.js  toast.js  update-panel.js
src/web/static/: account.css  compose.css  dashboard.css  email_detail.css  emails.css  keywords.css  settings.css  setup.css  style.css  theme.css  toast.css
src/web/templates/: account.html  auth_base.html  base.html  dashboard.html  email_detail.html  emails.html  keywords.html  login.html  settings.html  setup.html  setup_dashboard.html
src/web/templates/partials/: account.html  action_status.html  compose.html  dashboard_content.html  email_detail_content.html  email_rows.html  email_table.html  keywords.html  priority_badge.html  stats_cards.html  status_display.html  tailscale_status.html  toast.html  update_banner.html  update_panel.html
