[project]
name = "inbox-lens"
version = "0.3.0"
description = "Fetch, cache, and scan emails via IMAP with keyword-based priority tagging and a web dashboard"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.2.2",
    "python-telegram-bot[job-queue]==22.8",
    "tqdm==4.68.2",
    "html2text==2025.4.15",
    "rich==15.0.0",
    "fastapi==0.136.3",
    "python-multipart==0.0.32",
    "uvicorn==0.49.0",
    "jinja2==3.1.6",
    "cryptography==49.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.16",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
