[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inbox-lens"
version = "1.1.0"
description = "Fetch, cache, and scan emails via IMAP with keyword-based priority tagging and a web dashboard"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.2.2",
    "html2text==2025.4.15",
    "fastapi==0.136.3",
    "python-multipart==0.0.32",
    "uvicorn==0.49.0",
    "jinja2==3.1.6",
    "cryptography==49.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.0.0",
    "ruff==0.15.16",
    "httpx2==2.4.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[tool.coverage.run]
source = ["src/scripts"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src"]
