[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inbox-lens"
version = "1.9.0"
description = "Fetch, cache, and scan emails via IMAP with keyword-based priority tagging and a web dashboard"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.2.2",
    "html2text==2025.4.15",
    "fastapi==0.138.0",
    "python-multipart==0.0.32",
    "uvicorn==0.49.0",
    "jinja2==3.1.6",
    "cryptography==49.0.0",
    "bcrypt==5.0.0",
    "itsdangerous==2.2.0",
    "certifi>=2026.6.17; sys_platform != 'linux'",
    "markdown==3.10.2",
    "nh3==0.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.18",
    "httpx2==2.4.0",
    "djlint==1.39.4",
    "vulture==2.16",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[tool.coverage.run]
source = ["src/scripts"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.vulture]
paths = ["src/scripts"]
ignore_decorators = ["@app.get", "@app.post"]
ignore_names = [
    "dispatch",
    "ignore_links",
    "ignore_images",
    "body_width",
    "close_all_connections",
    "reset_rate_limit",
    "update_in_progress",
    "check_now",
    "row_factory",
]

[tool.djlint]
profile = "jinja"
indent = 2
files = ["src/web/templates"]
ignore = "H021,H023,H030,H031,J004,J018,T003,T028"

[tool.hatch.build.targets.wheel]
packages = ["src"]
